post fix: TIL150記事の画像最適化対応(#158)

--- a/src/content/posts/2019/2019-08-17-til-150.mdx
+++ b/src/content/posts/2019/2019-08-17-til-150.mdx
@@ -13,13 +13,14 @@ tags: ["TIL"]
 
 **※2021年末くらいからは Notion で TIL 活動をすることにしたので、リポジトリの活動停止してます。**
 
+import ImageWrapper from "@/components/ImageWrapper.astro"
 import OG from '@/components/OG.astro'
 
 ## TIL リポジトリ
 <OG url="https://github.com/h-yoshikawa44/til-engineer" />
 ※2021/02/14追記...アカウント名、リポジトリ名を変えました。
 
-<img src="/screenshots/2019/til-150/github-til.png" width="100%" alt="GitHub TILリポジトリ" />
+<ImageWrapper src="screenshots/2019/til-150/github-til.png" alt="GitHub TILリポジトリ" />
 ※contributors が2になっているのは、個人アカウントと仕事アカウントで利用しているからです。
 
 3月に投稿した[TILリポジトリで小さなアウトプット](/posts/2019-03-26-til)の記事。
@@ -34,7 +35,7 @@ import OG from '@/components/OG.astro'
 
 ### コミット履歴
 GitHub のアカウントのコミット履歴を見るのも少し楽しみになりました。
-<img src="/screenshots/2019/til-150/github-commit.png" width="100%" alt="GitHub コミット履歴" />
+<ImageWrapper src="screenshots/2019/til-150/github-commit.png" alt="GitHub コミット履歴" />
 
 5月頑張ってたみたいですね。
 休職期間だったので家にいたっていうのもありますが。
