post fix: 2019 - 振り返り 技術活動編記事の画像最適化対応(#158)

--- a/src/content/posts/2019/2019-12-31-looking-back-2019-git.mdx
+++ b/src/content/posts/2019/2019-12-31-looking-back-2019-git.mdx
@@ -12,6 +12,7 @@ tags: ["振り返り", "ブログ", "TIL"]
 ついに大晦日になりましたね。どうも、よしです。
 先日は精神疾患に関して振り返りを行いましたが、今度は Git のコミット履歴、ブログに関する振り返りをやってみました。
 
+import ImageWrapper from "@/components/ImageWrapper.astro"
 import OG from '@/components/OG.astro'
 
 ## 2019年の活動履歴
@@ -19,7 +20,7 @@ import OG from '@/components/OG.astro'
 まずは各アカウントのプロフィール画面から、コミット履歴を確認してみます。
 
 #### 個人 - GitHub
-<img src="/screenshots/2019/looking-back-2019-git/github-contributions-personal.png" width="100%" alt="GitHubの個人アカウントのcontributions履歴" />
+<ImageWrapper src="screenshots/2019/looking-back-2019-git/github-contributions-personal.png" alt="GitHubの個人アカウントのcontributions履歴" />
 
 4月後半から7月にかけてが多いですね。このあたりは精神疾患の症状が比較的落ち着いていて、勉強していた時期でもあります。
 6月に復職した頃は、通勤リハビリ～午前中勤務だったので、自分の時間に余裕があったというのもありました。
@@ -27,14 +28,14 @@ import OG from '@/components/OG.astro'
 大半は勉強用のTILリポジトリにコミットしていたものです。
 
 #### 仕事 - GitHub
-<img src="/screenshots/2019/looking-back-2019-git/github-contributions-work.png" width="100%" alt="GitHubの仕事アカウントのcontributions履歴" />
+<ImageWrapper src="screenshots/2019/looking-back-2019-git/github-contributions-work.png" alt="GitHubの仕事アカウントのcontributions履歴" />
 
 年始の頃は当時の案件をやっていましたが、プライベートリポジトリでしたし、そのリポジトリからは抜けたので、ここには表示されていないようです。
 2月中頃～5月末まで休職。
 6月に復職して、React の勉強～React 案件参加となってから少しずつコミットが増えていっています。
 
 #### 個人 - GitLab
-<img src="/screenshots/2019/looking-back-2019-git/gitlab-contributions-personal.png" width="100%" alt="GitLabの個人アカウントのcontributions履歴" />
+<ImageWrapper src="screenshots/2019/looking-back-2019-git/gitlab-contributions-personal.png" alt="GitLabの個人アカウントのcontributions履歴" />
 
 個人の GitLab に関しては、当ブログに関する活動履歴になります。
 年始に立てた、毎月1記事は投稿するという目標の元やっていましたが、後半は1か月あたり2～5記事投稿できました。
