post fix: 2020 - Slackの使い方記事の画像最適化対応(#158)

--- a/src/content/posts/2020/2020-03-14-slack-my-manner.mdx
+++ b/src/content/posts/2020/2020-03-14-slack-my-manner.mdx
@@ -12,6 +12,7 @@ tags: ["Slack"]
 エンジニア業界では、業務を行うにあたって Slack を活用している方が多いのではないでしょうか。
 以前、自分の Slack の使い方を展開したところ好評をいただけたので、今回思い切って記事にしてみました。
 
+import ImageWrapper from "@/components/ImageWrapper.astro"
 import OG from "@/components/OG.astro"
 
 ## Slack とは？
@@ -26,7 +27,7 @@ import OG from "@/components/OG.astro"
 
 Slack を知らない方だと、これを言われたところでイメージしにくそうなので実際のワークスペースの画像を貼っておきます。
 このブログを公開するにあたって、先輩に加勢していただいていた時期のやり取りなので、だいぶ前ですね(笑)
-<img src="/screenshots/2020/slack-my-manner/slack-sample.png" width="100%" alt="Slackワークスペースのサンプル画像" />
+<ImageWrapper src="screenshots/2020/slack-my-manner/slack-sample.png" alt="Slackワークスペースのサンプル画像" />
 
 Slack を使うためにはまずワークスペースを作ります。
 そしてそのワークスペースに参加したい人がアカウントを作成して参加する感じです。なお、複数のワークスペースに参加もできます。
