post fix: 2020 - 振り返り 技術活動編の画像最適化対応(#158)

--- a/src/content/posts/2020/2020-12-31-looking-back-2020-tech.mdx
+++ b/src/content/posts/2020/2020-12-31-looking-back-2020-tech.mdx
@@ -12,6 +12,7 @@ tags: ["ブログ", "振り返り", "TIL"]
 いよいよ今年が終わりますね。どうも、よしです。
 先日は精神疾患、体調に関する振り返りを行いましたが、今回は技術活動周りに関する振り返りをやっていきますー。
 
+import ImageWrapper from "@/components/ImageWrapper.astro"
 import OG from "@/components/OG.astro"
 
 ## 2020年の活動履歴
@@ -22,7 +23,7 @@ import OG from "@/components/OG.astro"
 #### 個人 - GitHub
 <OG url="https://github.com/h-yoshikawa44" />
 
-<img src="/screenshots/2020/looking-back-2020-tech/github-contributions-personal.png" width="100%" alt="GitHubの個人アカウントのcontributions履歴" />
+<ImageWrapper src="screenshots/2020/looking-back-2020-tech/github-contributions-personal.png" alt="GitHubの個人アカウントのcontributions履歴" />
 
 こうして見ると割とまばらですね(笑)
 昨年から始めた TIL 活動は正直あまりできていなかったかなと。
@@ -44,7 +45,7 @@ import OG from "@/components/OG.astro"
 漏れている型定義を追加しただけなので、その内容自体は大したことないのですが、ちょっとした OSS 活動みたいでやってよかったなと。
 
 #### 仕事 - GitHub
-<img src="/screenshots/2020/looking-back-2020-tech/github-contributions-work.png" width="100%" alt="GitHubの仕事アカウントのcontributions履歴" />
+<ImageWrapper src="screenshots/2020/looking-back-2020-tech/github-contributions-work.png" alt="GitHubの仕事アカウントのcontributions履歴" />
 ※10月の退職にあたって、アカウントを削除する前に撮っておいたものです。
 
 3月までの案件では、割とゴリゴリと開発をやっていたので活動多めです。
