post fix: 2022 - HTMLプロフェッショナル記事の画像最適化対応(#158)

--- a/src/content/posts/2022/2022-06-11-html-professional-level1.mdx
+++ b/src/content/posts/2022/2022-06-11-html-professional-level1.mdx
@@ -12,6 +12,7 @@ tags: ["HTML", "CSS"]
 こんにちは、復職して落ち着いてきたのでそろそろ何か活動再開しようかなと考えている、よしです。
 先日、HTML プロフェッショナル認定試験 レベル1(ver2.5)に合格したのでレポート記事を書くことにしました。
 
+import ImageWrapper from "@/components/ImageWrapper.astro"
 import OG from "@/components/OG.astro"
 
 ## HTML5 プロフェッショナル認定試験って？
@@ -31,7 +32,7 @@ import OG from "@/components/OG.astro"
 引用の通り、この資格はレベル1と2が存在し、以下のように出題範囲が異なります。
 
 公式より
-<img src="/screenshots/2022/html-professional-level1/html-professional-range.png" width="80%" alt="HTML5プロフェッショナル認定試験 レベルごとの出題範囲" />
+<ImageWrapper class="w-[80%]" src="screenshots/2022/html-professional-level1/html-professional-range.png" alt="HTML5プロフェッショナル認定試験 レベルごとの出題範囲" />
 
 > **HTML/HTML5 マークアップ**
 > HTML5 に関するタグの用途、構造の組み立て方に関する技術
@@ -76,10 +77,10 @@ ver2.0 と ver2.5 の[差分](https://html5exam.jp/images/outline/html5_lv1_ver2
 自分は現在、一応フロントエンドエンジニアとして業務をしているので、まぁなんとかなるやろ...という気持ちで取り組んでいました。
 
 では、その結果がどうだったかといいますと...
-<img src="/screenshots/2022/html-professional-level1/html-professional-score.png" width="100%" alt="自分のスコア:68 - Webの基礎知識:58% CSS:80% 要素:61% レスポンシブWebデザイン:85% APIの基礎知識:62%" />
+<ImageWrapper src="screenshots/2022/html-professional-level1/html-professional-score.png" alt="自分のスコア:68 - Webの基礎知識:58% CSS:80% 要素:61% レスポンシブWebデザイン:85% APIの基礎知識:62%" />
 
 スコアを拡大
-<img src="/screenshots/2022/html-professional-level1/html-professional-score-zoom.png" width="100%" alt="スコア:68 合格基準:65" />
+<ImageWrapper src="screenshots/2022/html-professional-level1/html-professional-score-zoom.png" alt="スコア:68 合格基準:65" />
 
 {/* <!-- textlint-disable ja-technical-writing/ja-no-successive-word, ja-technical-writing/sentence-length --> */}
 
