post fix: 2022 - AWS SAA再取得記事の画像最適化対応(#158)

--- a/src/content/posts/2022/2022-09-03-aws-saa-update.mdx
+++ b/src/content/posts/2022/2022-09-03-aws-saa-update.mdx
@@ -12,6 +12,7 @@ tags: ["AWS"]
 こんにちは、最近記事書けてなくてご無沙汰な、よしです。
 先日、AWS SAA の更新試験を受験してきて無事に更新できたので、その簡易レポート記事を書くことにしました。
 
+import ImageWrapper from "@/components/ImageWrapper.astro"
 import OG from "@/components/OG.astro"
 
 ## AWS SAA とは？
@@ -64,7 +65,7 @@ SAA-C03 になるとだいぶ試験範囲のサービスが増えるようだっ
 6月に HTML プロフェッショナル認定試験を受験した後、すぐにはやる気が出ずで7月くらいから勉強してました。
 
 結果はこちら
-<img src="/screenshots/2022/aws-saa-update/aws-saa-update-score.png" width="100%" alt="AWS SAA 更新試験のスコア：796" />
+<ImageWrapper src="screenshots/2022/aws-saa-update/aws-saa-update-score.png" alt="AWS SAA 更新試験のスコア：796" />
 
 おおよそ8割くらいは取れてたので、ちょっと安心。
 （先日受験した HTML プロフェッショナル認定試験ではマジでギリギリだったもので...）
