post fix: 2023 - 振り返り 技術活動編の画像最適化対応(#158)

--- a/src/content/posts/2023/2023-12-31-looking-back-2023-tech.mdx
+++ b/src/content/posts/2023/2023-12-31-looking-back-2023-tech.mdx
@@ -12,6 +12,7 @@ tags: ["振り返り", "ブログ", "TIL"]
 今年はキャリアに伸び悩んでクヨクヨしたりが多かったなぁと思っている、よしです。
 今年の振り返り、技術活動・キャリア編です～。
 
+import ImageWrapper from "@/components/ImageWrapper.astro"
 import OG from "@/components/OG.astro"
 
 ## 2023年の活動履歴
@@ -21,7 +22,7 @@ import OG from "@/components/OG.astro"
 #### GitHub
 <OG url="https://github.com/h-yoshikawa44" />
 
-<img src="/screenshots/2023/looking-back-2023-tech/github-contribute.png" width="100%" alt="2023年のGitHub Contributionsの履歴画像 1712Contributions" />
+<ImageWrapper src="screenshots/2023/looking-back-2023-tech/github-contribute.png" alt="2023年のGitHub Contributionsの履歴画像 1712Contributions" />
 
 今年は 1712（個人） + 82（仕事） = 1794 でした。
 
@@ -33,12 +34,12 @@ import OG from "@/components/OG.astro"
 #### 案件 - GitLab・GitHub
 参加している案件では、セルフホスティングの GitLab -> GitHub へ移行中のため、両方載せておきます。
 
-<img src="/screenshots/2023/looking-back-2023-tech/gitlab-contribute-pj.png" width="100%" alt="2023年の仕事用GitLab Contributionsの履歴画像 1699Contributions" />
+<ImageWrapper src="screenshots/2023/looking-back-2023-tech/gitlab-contribute-pj.png" alt="2023年の仕事用GitLab Contributionsの履歴画像 1699Contributions" />
 
 GitLab の方は Contributions の合計を計算したところ 1699 でした。
 一番多い濃い日は、多いところで 32 contributions ほど。
 
-<img src="/screenshots/2023/looking-back-2023-tech/github-contribute-pj.png" width="100%" alt="2023年の仕事用GitHub Contributionsの履歴画像 785Contributions" />
+<ImageWrapper src="screenshots/2023/looking-back-2023-tech/github-contribute-pj.png" alt="2023年の仕事用GitHub Contributionsの履歴画像 785Contributions" />
 
 GitLab の方を見てもらえるとわかるように、大体9月くらいから移行しています。
 GitHub 側の9月より前の活動は重複カウントとみなしてカウントせず。
@@ -142,7 +143,7 @@ GitHub 側の9月より前の活動は重複カウントとみなしてカウン
 今年 Zenn からいただいた振り返りはこんな感じでした。
 （12/20までのものです）
 
-<img src="/screenshots/2023/looking-back-2023-tech/zenn-recap.png" width="70%" alt="Zenn 2023 Recap - 2023年の活動振り返りデータ - 64,912字の執筆、6記事、1スクラップ、63,246ビュー、402Likes" />
+<ImageWrapper class="w-[70%]" src="screenshots/2023/looking-back-2023-tech/zenn-recap.png" alt="Zenn 2023 Recap - 2023年の活動振り返りデータ - 64,912字の執筆、6記事、1スクラップ、63,246ビュー、402Likes" />
 
 やはり文字数は少なめ（昨年は13万文字くらい）
 
